--- a/.env
+++ b/.env
@@ -1,10 +1,22 @@
+# FLASK_CONFIG options: 
+# - 'dev' uses SQLALCHEMY_DATABASE_URI
+# - 'test' uses SQLALCHEMY_DATABASE_URI_TEST
+# - 'prod' uses SQLALCHEMY_DATABASE_URI_PROD
+FLASK_CONFIG=dev
+
 FLASK_APP=run.py
 FLASK_ENV=development
-FLASK_CONFIG=dev
 SECRET_KEY=your_secret_key
-SQLALCHEMY_DATABASE_URI=sqlite:///auto_shop.db
+
+# Development Database
+SQLALCHEMY_DATABASE_URI=mysql+mysqlconnector://root:@localhost/advanced_api_development_dev
+
+# Testing Database (SQLite for simplicity)
 SQLALCHEMY_DATABASE_URI_TEST=sqlite:///test.db
-SQLALCHEMY_DATABASE_URI_PROD=sqlite:///prod.db
+
+# Production Database
+SQLALCHEMY_DATABASE_URI_PROD=mysql+mysqlconnector://root:@localhost/advanced_api_development
+
 SQLALCHEMY_TRACK_MODIFICATIONS=False
 CACHE_TYPE=simple
 RATE_LIMIT=100 per hour
