--- a/.env
+++ b/.env
@@ -1,22 +1,10 @@
-# FLASK_CONFIG options: 
-# - 'dev' uses SQLALCHEMY_DATABASE_URI
-# - 'test' uses SQLALCHEMY_DATABASE_URI_TEST
-# - 'prod' uses SQLALCHEMY_DATABASE_URI_PROD
-FLASK_CONFIG=dev
-
 FLASK_APP=run.py
 FLASK_ENV=development
+FLASK_CONFIG=dev
 SECRET_KEY=your_secret_key
-
-# Development Database
-SQLALCHEMY_DATABASE_URI=mysql+mysqlconnector://root:@localhost/advanced_api_development_dev
-
-# Testing Database (SQLite for simplicity)
+SQLALCHEMY_DATABASE_URI=sqlite:///auto_shop.db
 SQLALCHEMY_DATABASE_URI_TEST=sqlite:///test.db
-
-# Production Database
-SQLALCHEMY_DATABASE_URI_PROD=mysql+mysqlconnector://root:@localhost/advanced_api_development
-
+SQLALCHEMY_DATABASE_URI_PROD=sqlite:///prod.db
 SQLALCHEMY_TRACK_MODIFICATIONS=False
 CACHE_TYPE=simple
 RATE_LIMIT=100 per hour
