--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Flask-Limiter==2.4.2
 flask-marshmallow==1.3.0
 Flask-Migrate==4.1.0
 Flask-SQLAlchemy==3.1.1
+flask-swagger-ui==4.11.1
 greenlet==3.1.1
 itsdangerous==2.2.0
 Jinja2==3.1.5
